--- a/index.html
+++ b/index.html
@@ -5,7 +5,6 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link rel="js" href="./index.js">
 </head>
 
 
@@ -13,9 +12,21 @@
     <button onclick="fetchTodos()">Fetch Todos</button>
     <button onclick="logTodos()">Log Todos</button>
     <button onclick="populateTodos()">Populate Todos</button>
-    <ol id="todo-list">
-    <!-- LIs will go here -->
-    </ol> 
+
+
+    <form>
+        <label for="label_USERID">User ID</label>
+        
+        <input type="number" id ="useridnumber" name = "useridnumber" min ="1" max="10" placeholder ="1-10" required>
+
+        <input type ="button" value="Submit" onclick="submitbutton()" />
+        <div id = "alert" style = "color: red"></div>        
+    </form> 
+
+    <button onclick="matchuseridinfo()">Match User id info</button>
+    <button onclick = "CompleteOrNot()">Complete or Not Complete</button>
+
+    <ol id="todo-list"></ol> 
 </body>
 
 <script src="index.js">
